--- a/dolphin-gateway/src/main/resources/application.properties
+++ b/dolphin-gateway/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-nacos.server.ip=192.168.1.95:8848
-sentinel.server.ip=localhost:8080
-zipkin.server.ip=http://127.0.0.1:9411/
+jdbc.driverClass=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://dbserver:3306/vmediax_rss2?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
+jdbc.username=root
+jdbc.password=vmediax
+
+nacos.server.ip=ncserver:8848
+sentinel.server.ip=stserver:8080
+zipkin.server.ip=http://zpserver:9411/
