--- a/dolphin-work/dolphin-sonar/pom.xml
+++ b/dolphin-work/dolphin-sonar/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
 
