提交人：刘金台 内  容：整个mybatis-generator-maven-plugin         登录接口         推出接口

--- a/dolphin-gateway/src/main/resources/application.yml
+++ b/dolphin-gateway/src/main/resources/application.yml
@@ -20,3 +20,8 @@ management:
     web:
       exposure:
         include: '*'
+
+getWay:
+  white:
+    list: /v1/login,  #白名单放行
+  prefix: /api   #为网关设置一个公共的前缀
