--- a/dolphin-gateway/pom.xml
+++ b/dolphin-gateway/pom.xml
@@ -30,6 +30,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.cs</groupId>
+            <artifactId>dolphin-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
