--- a/dolphin-work-api/dolphin-sonar-api/pom.xml
+++ b/dolphin-work-api/dolphin-sonar-api/pom.xml
@@ -3,18 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dolphin</artifactId>
+        <artifactId>dolphin-work-api</artifactId>
         <groupId>org.cs</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>dolphin-work</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>dolphin-ucenter</module>
-        <module>dolphin-sonar</module>
-        <module>dolphin-radar</module>
-    </modules>
+
+    <artifactId>dolphin-sonar-api</artifactId>
+    <packaging>jar</packaging>
 
 
 </project>
