--- a/dolphin-work/dolphin-sonar/pom.xml
+++ b/dolphin-work/dolphin-sonar/pom.xml
@@ -63,6 +63,18 @@
             <artifactId>xxl-job-core</artifactId>
             <version>2.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.cs</groupId>
+            <artifactId>dolphin-sonar-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.cs</groupId>
+            <artifactId>dolphin-radar-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
