--- a/dolphin-work/dolphin-sonar/src/main/resources/application.properties
+++ b/dolphin-work/dolphin-sonar/src/main/resources/application.properties
@@ -26,5 +26,7 @@ xxl.job.accessToken=
 xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
 # 执行器日志保存天数 [选填] ：值大于3时生效，启用执行器Log文件定期清理功能，否则不生效
 xxl.job.executor.logretentiondays=7
+#JOB客户端启动开关
+xxl.job.start=true
 
 xxl.api.add.job.url=/jobinfo/api/add
