--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.properties
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.properties
@@ -1,17 +1,18 @@
 jdbc.driverClass=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://dbserver:3306/vmediax_rss2?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
+#jdbc.url=jdbc:mysql://dbserver:3306/vmediax_rss2?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
 jdbc.username=root
 jdbc.password=vmediax
+
 nacos.server.ip=ncserver:8848
-sentinel.server.ip=stserver:8080
-zipkin.server.ip=http://zpserver:9411/
+#sentinel.server.ip=stserver:8080
+#zipkin.server.ip=http://zpserver:9411/
 
 
 # Job地址，单台服务，直接配置单台服务地址，集群部署，可以配置代理地址，
 # 也可以配置多个服务地址；例： "http://address" or "http://address01,http://address02"
 # 调度中心部署跟地址 [选填]：如调度中心集群部署存在多个地址则用逗号分隔。
 # 执行器将会使用该地址进行"执行器心跳注册"和"任务结果回调"；为空则关闭自动注册；
-xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+#xxl.job.admin.addresses=http://192.168.1.221:8080/xxl-job-admin
 # 执行器AppName [选填]：执行器心跳注册分组依据；为空则关闭自动注册
 xxl.job.executor.appname=xxl-job-executor-sonar
 # 执行器IP [选填]：默认为空表示自动获取IP，多网卡时可手动设置指定IP，
