--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
@@ -1,10 +1,15 @@
 server:
   port: 9006 #提供者的端口
 spring:
+  main:
+    allow-bean-definition-overriding: true
   application:
     name: dolphin-sonar
   cloud:
     nacos:
+      config:
+        server-addr: ${nacos.server.ip}
+        prefix: dolphin-config
       discovery:
         server-addr: ${nacos.server.ip}
     sentinel:
