--- a/dolphin-gateway/src/main/resources/bootstrap.yml
+++ b/dolphin-gateway/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9009 #网管
+  port: 9009 #网关
 spring:
   application:
     name: dolphin-gateway
@@ -18,6 +18,25 @@ spring:
     locator:
       discovery:
         enabled: true
+
+  redis:
+    database: ${redis.database}
+    # Redis服务器地址
+    host: ${redis.host}
+    # Redis服务器连接端口
+    port: ${redis.port}
+    # Redis服务器连接密码（默认为空）
+    password: ${redis.password}
+    # 连接池最大连接数（使用负值表示没有限制）
+    jedis.pool.max-active: ${jedis.pool.max-active}
+    # 连接池最大阻塞等待时间（使用负值表示没有限制）
+    jedis.pool.max-wait: ${jedis.pool.max-wait}
+    # 连接池中的最大空闲连接
+    jedis.pool.max-idle: ${jedis.pool.max-idle}
+    # 连接池中的最小空闲连接
+    jedis.pool.min-idle: ${jedis.pool.min-idle}
+    # 连接超时时间（毫秒）
+    timeout: ${redis.timeout}
 management:
   endpoints:
     web:
