--- a/dolphin-work/dolphin-ucenter/pom.xml
+++ b/dolphin-work/dolphin-ucenter/pom.xml
@@ -77,6 +77,16 @@
             <artifactId>redisson</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
