--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
@@ -43,3 +43,20 @@ management:
     web:
       exposure:
         include: '*'
+
+xxl:
+  job:
+    admin:
+      addresses: ${xxl.job.admin.addresses}
+    executor:
+      appname: xxl-job-executor-sonar
+      ip:
+      port: 9999
+      logpath: ${xxl.job.executor.logpath}
+      logretentiondays: ${xxl.job.executor.logretentiondays}
+    accessToken:
+    start: true
+  api:
+    add:
+      job:
+        url: /jobinfo/api/add
