--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.properties
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ jdbc.driverClass=com.mysql.cj.jdbc.Driver
 jdbc.username=root
 jdbc.password=vmediax
 
-nacos.server.ip=ncserver:8848
+nacos.server.ip=192.168.1.95:8848
 #sentinel.server.ip=stserver:8080
 #zipkin.server.ip=http://zpserver:9411/
 
@@ -28,6 +28,8 @@ xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
 # 执行器日志保存天数 [选填] ：值大于3时生效，启用执行器Log文件定期清理功能，否则不生效
 xxl.job.executor.logretentiondays=7
 #JOB客户端启动开关
-xxl.job.start=true
+xxl.job.start=false
 
 xxl.api.add.job.url=/jobinfo/api/add
+
+logging.level.com.alibaba.nacos.client.naming=error
