--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
@@ -20,6 +20,7 @@ spring:
     locator:
       discovery:
         enabled: true
+    discovery-client-enabled: false
   datasource:
     url: ${jdbc.url}
     username: ${jdbc.username}
