提交人：刘金台 内  容：日记记录及远程调用记录日志功能开发         线程池整合

--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
@@ -60,3 +60,12 @@ xxl:
     add:
       job:
         url: /jobinfo/api/add
+
+thread:
+  corePoolSize: 10
+  maxPoolSize: 30
+  queueCapacity: 1000
+  waitFTTCOS: true
+  awaitTerminationSeconds: 60
+  threadNamePrefix: Sonar
+
