--- a/dolphin-common/pom.xml
+++ b/dolphin-common/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>spring-data-redis</artifactId>
             <version>1.7.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.0-beta1</version>
+        </dependency>
     </dependencies>
 
 
