--- a/dolphin-work/dolphin-ucenter/pom.xml
+++ b/dolphin-work/dolphin-ucenter/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
