提交人：刘金台 内  容：目录优化

--- a/dolphin-work/dolphin-ucenter/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-ucenter/src/main/resources/bootstrap.yml
@@ -86,7 +86,20 @@ pagehelper:
   reasonable: true
   supportMethodsArguments: true
   params: count=countSql
-logging:
-  level:
-    org:
-      cs: debug
+
+xxl:
+  job:
+    admin:
+      addresses: ${xxl.job.admin.addresses}
+    executor:
+      appname: xxl-job-executor-ucenter
+      ip:
+      port: 9991
+      logpath: ${xxl.job.executor.logpath}
+      logretentiondays: ${xxl.job.executor.logretentiondays}
+    accessToken:
+    start: true
+  api:
+    add:
+      job:
+        url: /jobinfo/api/add
