--- a/dolphin-work/dolphin-sonar/pom.xml
+++ b/dolphin-work/dolphin-sonar/pom.xml
@@ -79,6 +79,30 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <!--生成代码脚本包-->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+        <!-- 引入freemarker包 -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <!--生成代码脚本包-->
     </dependencies>
 
 
