--- a/dolphin-work/dolphin-sonar/pom.xml
+++ b/dolphin-work/dolphin-sonar/pom.xml
@@ -79,6 +79,11 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
         <!--生成代码脚本包-->
         <dependency>
             <groupId>org.testng</groupId>
@@ -118,6 +123,10 @@
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
