--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
@@ -50,7 +50,7 @@ spring:
     # Redis服务器连接端口
     port: ${redis.port}
     # Redis服务器连接密码（默认为空）
-    #password: ${redis.password}
+    password: ${redis.password}
 
 
     # 连接池最大连接数（使用负值表示没有限制）
