--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.properties
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.properties
@@ -31,3 +31,5 @@ xxl.job.executor.logretentiondays=7
 xxl.job.start=true
 
 xxl.api.add.job.url=/jobinfo/api/add
+
+logging.level.com.alibaba.nacos.client.naming=error
