--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
@@ -41,40 +41,29 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
 
   redis:
-    #1是集群 2是单点
-    isCluster: 2
-    database: ${redis.database}
+    isCluster: 2 #1是集群 2是单点
+    database: ${redis.database} #开始存储节点，一般默认为0
     # Redis服务器地址
     #----------单机配置(集群模式需要注释掉)----------#
-    host: ${redis.host}
-    # Redis服务器连接端口
-    port: ${redis.port}
-    # Redis服务器连接密码（默认为空）
-    password: ${redis.password}
+    host: ${redis.host} # Redis服务器地址
+    port: ${redis.port} # Redis服务端口
+    password: ${redis.password} #Redis服务器连接密码（默认为空）
 
+    jedis.pool.max-active: ${jedis.pool.max-active} #连接池最大连接数（使用负值表示没有限制）
+    jedis.pool.max-wait: ${jedis.pool.max-wait} # 连接池最大阻塞等待时间（使用负值表示没有限制）
+    jedis.pool.max-idle: ${jedis.pool.max-idle} # 连接池中的最大空闲连接
+    jedis.pool.min-idle: ${jedis.pool.min-idle} # 连接池中的最小空闲连接
+    timeout: ${redis.timeout} # 连接超时时间（毫秒）
 
-    # 连接池最大连接数（使用负值表示没有限制）
-    jedis.pool.max-active: ${jedis.pool.max-active}
-    # 连接池最大阻塞等待时间（使用负值表示没有限制）
-    jedis.pool.max-wait: ${jedis.pool.max-wait}
-    # 连接池中的最大空闲连接
-    jedis.pool.max-idle: ${jedis.pool.max-idle}
-    # 连接池中的最小空闲连接
-    jedis.pool.min-idle: ${jedis.pool.min-idle}
-    # 连接超时时间（毫秒）
-    timeout: ${redis.timeout}
     #----------集群配置(单点模式需要注释掉)----------#
     #cluster:
-    #  nodes: 127.0.0.1:6379,127.0.0.1:6380,127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384
-    #  max-redirects: 3
-    #  time-out: 10000
-    #  so-time-out: 10000
-    #  max-attempts: 10
+    #  nodes: 127.0.0.1:6379,127.0.0.1:6380,127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384 #集群节点
+    #  max-redirects: 3 #集群最大转发的数量
     #lettuce:
     #  pool:
-    #    max-idle: 16
-    #    max-active: 32
-    #    min-idle: 8
+    #    max-active: 32 # 连接池最大连接数（使用负值表示没有限制）
+    #    min-idle: 8 # 连接池中的最大空闲连接
+    #    max-wait: 10000 #连接池最大阻塞等待时间（使用负值表示没有限制）
 
 management:
   endpoints:
