提交人：刘金台 内  容：配置优化,网关添加swagger优化，通过网关访问

--- a/dolphin-gateway/src/main/resources/bootstrap.yml
+++ b/dolphin-gateway/src/main/resources/bootstrap.yml
@@ -62,7 +62,7 @@ management:
 
 getWay:
   white:
-    list: /v1/login,/socketServer  #白名单放行
+    list: /v1/login,/socketServer,swagger,/v2  #白名单放行
   prefix: /api   #为网关设置一个公共的前缀
 
 hystrix:
