--- a/dolphin-common/pom.xml
+++ b/dolphin-common/pom.xml
@@ -82,6 +82,14 @@
             <artifactId>easyexcel</artifactId>
             <version>2.1.0-beta1</version>
         </dependency>
+
+       <!-- 二维码 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
 
