--- a/dolphin-work/dolphin-ucenter/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-ucenter/src/main/resources/bootstrap.yml
@@ -98,7 +98,7 @@ xxl:
       logpath: ${xxl.job.executor.logpath}
       logretentiondays: ${xxl.job.executor.logretentiondays}
     accessToken:
-    start: true
+    start: false
   api:
     add:
       job:
