--- a/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
+++ b/dolphin-work/dolphin-sonar/src/main/resources/bootstrap.yml
@@ -82,7 +82,7 @@ xxl:
       logpath: ${xxl.job.executor.logpath}
       logretentiondays: ${xxl.job.executor.logretentiondays}
     accessToken:
-    start: true
+    start: false
   api:
     add:
       job:
@@ -95,4 +95,16 @@ thread:
   waitFTTCOS: true
   awaitTerminationSeconds: 60
   threadNamePrefix: Sonar
-
+logging:
+  level:
+    com:
+      alibaba:
+        nacos:
+          client:
+            naming: error
+feign:
+  client:
+    config:
+      default:
+        connect-timeout: 20000
+        read-timeout: 20000
