--- a/dolphin-work/dolphin-sonar/pom.xml
+++ b/dolphin-work/dolphin-sonar/pom.xml
@@ -37,10 +37,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>
+        </dependency>-->
         <!-- 引用Mybatis 和 Mysql驱动开始  -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
@@ -108,6 +108,11 @@
             <version>2.4</version>
         </dependency>
         <!--生成代码脚本包-->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
     </dependencies>
 
 
