--- a/dolphin-work/dolphin-ucenter/pom.xml
+++ b/dolphin-work/dolphin-ucenter/pom.xml
@@ -46,10 +46,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- 引用Mybatis 和 Mysql驱动开始  -->
         <dependency>
